syntax = "proto3";

package data;

option go_package = "internal/data_node/genproto";

service DataNodeService {
  rpc WriteChunk(WriteChunkRequest) returns (WriteChunkResponse);
  rpc ReadChunk(ReadChunkRequest) returns (ReadChunkResponse);
  rpc DeleteChunk(DeleteChunkRequest) returns (DeleteChunkResponse);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}

message WriteChunkRequest {
  string chunk_id = 1;
  bytes data = 2;
}

message WriteChunkResponse {
  string chunk_id = 1;
}

message ReadChunkRequest {
  string chunk_id = 1;
}

message ReadChunkResponse {
  string chunk_id = 1;
  bytes data = 2;
}

message DeleteChunkRequest {
  string chunk_id = 1;
}

message DeleteChunkResponse {
  string chunk_id = 1;
}

message HeartbeatRequest {
  string node_id = 1;
}

message HeartbeatResponse {
  string node_id = 1;
}