syntax = "proto3";

package metadata_service;

option go_package = "internal/metadata_service/genproto";

service MetadataService {
  rpc GetInode(GetInodeRequest) returns (Inode);
  rpc CreateFile(CreateFileRequest) returns (CreateFileResponse);
  rpc ListDir(ListDirRequest) returns (ListDirResponse);
}

message ListDirRequest {
  string directory_id = 1;
  string directory_name = 2;
  string parent_id = 3;
  bool recursive = 4;
  bool include_hidden = 5;
  int32 max_depth = 6;
}

message ListDirResponse {
  repeated Inode entries = 1;
}

message CreateFileRequest {
  string name = 1;
  string parent = 2;
  bool is_dir = 3;
}

message CreateFileResponse {
  string name = 1;
  string inode = 2;
}

message GetInodeRequest {
  string name = 1;
  bool is_dir = 2;
}

message Inode {
  string id = 1;
  string name = 2;
  bool is_dir = 3;
  int64 size = 4;
  string permission = 5;
  string parent = 6;
}

